spacing landingpage fixed

--- a/frontend/src/pages/LandingPage/landingpage.module.css
+++ b/frontend/src/pages/LandingPage/landingpage.module.css
@@ -1,6 +1,6 @@
 .container {
   display: flex;
-  height: 100vh;
+  min-height: 100vh;
   background-color: var(--color-bg);
   color: var(--color-text);
   position: relative;
@@ -17,15 +17,20 @@
 /* === Spalten Layout === */
 .left,
 .right {
-  flex: 1;
+  flex: 1 1 0;
   display: flex;
-  align-items: left;
+  align-items: flex-start;
   justify-content: center;
+  min-width: 400px;
+  max-width: 900px;
+}
+.left {
+  padding-top: 17rem;
 }
 
 /* Logo */
 .logo {
-  max-width: 500px;
+  max-width: 450px;
   height: auto;
   padding-left: 3rem;
 }
@@ -49,13 +54,14 @@
 /* === Rechte Spalte Inhalt === */
 .right {
   flex-direction: column;
-  gap: 1.5rem;
-  max-width: 800px;
-  padding: 4rem;
+  gap: 1rem;
+  max-width: 900px;
+  padding: 0rem 3rem;
+  align-items: flex-start;
 }
 
 .headline {
-  font-size: 3rem;
+  font-size: 2.5rem;
   font-weight: 800;
   line-height: 1.2;
 }
@@ -70,7 +76,7 @@
   display: flex;
   flex-direction: column;
   gap: 0.75rem;
-  max-width: 20rem;
+  max-width: 40rem;
 }
 
 .oauthBtn {
@@ -79,7 +85,6 @@
 
 .createAccountBtn {
   background-color: var(--color-primary);
-  max-width: 20rem;
   color: #fff;
   border: none;
   padding: 0.75rem 1.5rem;
@@ -100,7 +105,7 @@
   align-items: center;
   text-align: center;
   margin: 0rem 0;
-  max-width: 20rem;
+  max-width: 50rem;
 }
 
 .divider::before,
@@ -169,14 +174,15 @@
   }
 
   .logo {
-    max-width: 300px;
+    max-width: 200px;
+  padding-left: 0rem;
   }
 }
 
 /* === Mobile Optimierung === */
 @media (max-width: 640px) {
   .headline {
-    font-size: 2rem;
+    font-size: 1.5rem;
   }
 
   .subheadline {
